--- a/src/cinema/threatre3.fxml
+++ b/src/cinema/threatre3.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Threatre1Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Threatre3Controller">
 <children>
     <Pane layoutY="505.0" prefHeight="68.0" prefWidth="1020.0" style="-fx-background-color: grey;">
         <children>
@@ -54,82 +54,82 @@
                 </font>
             </Label>
         </children></Pane>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="699.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D7" fitHeight="61.0" fitWidth="55.0" layoutX="699.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="594.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D6" fitHeight="61.0" fitWidth="55.0" layoutX="594.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="499.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D5" fitHeight="61.0" fitWidth="55.0" layoutX="499.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="800.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D8" fitHeight="61.0" fitWidth="55.0" layoutX="800.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="379.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D4" fitHeight="61.0" fitWidth="55.0" layoutX="379.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="280.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D3" fitHeight="61.0" fitWidth="55.0" layoutX="280.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="176.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D2" fitHeight="61.0" fitWidth="55.0" layoutX="176.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="699.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C7" fitHeight="61.0" fitWidth="55.0" layoutX="699.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="797.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C8" fitHeight="61.0" fitWidth="55.0" layoutX="797.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="597.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C6" fitHeight="61.0" fitWidth="55.0" layoutX="597.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="499.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C5" fitHeight="61.0" fitWidth="55.0" layoutX="499.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="379.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C4" fitHeight="61.0" fitWidth="55.0" layoutX="379.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="283.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C3" fitHeight="61.0" fitWidth="55.0" layoutX="283.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="176.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C2" fitHeight="61.0" fitWidth="55.0" layoutX="176.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="87.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="C1" fitHeight="61.0" fitWidth="55.0" layoutX="87.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="61.0" fitWidth="55.0" layoutX="90.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="D1" fitHeight="61.0" fitWidth="55.0" layoutX="90.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/sofa__chair__interior__furniture__seat-512.png" />
         </image>
@@ -195,72 +195,72 @@
             <Font name="System Bold" size="12.0" />
         </font>
     </Label>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="198.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B2" fitHeight="55.0" fitWidth="64.0" layoutX="198.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="90.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B1" fitHeight="55.0" fitWidth="64.0" layoutX="90.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="313.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B3" fitHeight="55.0" fitWidth="64.0" layoutX="313.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="423.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B4" fitHeight="55.0" fitWidth="64.0" layoutX="423.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="535.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B5" fitHeight="55.0" fitWidth="64.0" layoutX="535.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="678.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B6" fitHeight="55.0" fitWidth="64.0" layoutX="678.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="797.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="B7" fitHeight="55.0" fitWidth="64.0" layoutX="797.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="96.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A1" fitHeight="55.0" fitWidth="64.0" layoutX="96.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="195.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A2" fitHeight="55.0" fitWidth="64.0" layoutX="195.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="310.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A3" fitHeight="55.0" fitWidth="64.0" layoutX="310.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="423.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A4" fitHeight="55.0" fitWidth="64.0" layoutX="423.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="532.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A5" fitHeight="55.0" fitWidth="64.0" layoutX="532.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="794.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A7" fitHeight="55.0" fitWidth="64.0" layoutX="794.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="55.0" fitWidth="64.0" layoutX="678.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="A6" fitHeight="55.0" fitWidth="64.0" layoutX="678.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/65-512.png" />
         </image>
@@ -297,5 +297,11 @@
     <Label layoutX="120.0" layoutY="391.0" text="1" textFill="#d9e809" />
     <Button fx:id="gobackthreatre3" layoutX="27.0" layoutY="475.0" mnemonicParsing="false" onAction="#goBackFromThreatre1" onMouseClicked="#goBackFromThreatre1" style="-fx-background-color: white; -fx-background-radius: 100;" text="Back" textFill="#eb0b0b" />
     <Button fx:id="gohomethreatre3" layoutX="948.0" layoutY="475.0" mnemonicParsing="false" onAction="#goHomeFromThreatre1" onMouseClicked="#goHomeFromThreatre1" style="-fx-background-radius: 100;" text="Home" textFill="#f50a0a" />
+      <Button fx:id="confirm" layoutX="551.0" layoutY="470.0" mnemonicParsing="false" onAction="#confirmBtn" onMouseClicked="#confirmBtn" prefHeight="36.0" prefWidth="105.0" style="-fx-background-color: green; -fx-background-radius: 100;" text="Book" textFill="#fcf9f9">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button layoutX="673.0" layoutY="475.0" mnemonicParsing="false" onAction="#goReceipt" onMouseClicked="#goReceipt" style="-fx-background-radius: 100;" text="Receipt" />
 </children>
 </Pane>
