--- a/src/cinema/threatre1_11-00.fxml
+++ b/src/cinema/threatre1_11-00.fxml
@@ -294,5 +294,6 @@
                 <Font name="System Bold" size="12.0" />
             </font>
         </Button>
+      <Button layoutX="742.0" layoutY="475.0" mnemonicParsing="false" onAction="#goReceipt" onMouseClicked="#goReceipt" style="-fx-background-radius: 100;" text="Receipt" />
     </children>
 </Pane>
